--- a/app.json
+++ b/app.json
@@ -1,12 +1,53 @@
 {
   "pages":[
-    "pages/index/index",
-    "pages/logs/logs"
+    "pages/list/index",
+    "pages/position/index",
+    "pages/explore/index",
+    "pages/apply/index",
+    "pages/profile/index"
   ],
   "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
-  }
+    "backgroundTextStyle": "light",
+    "backgroundColor": "#f6f8f9",
+    "navigationBarBackgroundColor": "#2DBE60",
+    "navigationBarTitleText": "骚窝 - 内推",
+    "navigationBarTextStyle": "white",
+    "enablePullDownRefresh": true
+  },
+  "tabBar": {
+    "position": "bottom",
+    "color": "gray",
+    "selectedColor": "#2DBE60",
+    "backgroundColor": "#f6f8f9",
+    "borderStyle": "white",
+    "list": [{
+      "pagePath": "pages/list/index",
+      "text": "List",
+      "iconPath": "icons/home.png",
+      "selectedIconPath": "icons/home_green.png"
+    },
+    {
+      "pagePath": "pages/explore/index",
+      "text": "Explore",
+      "iconPath": "icons/compass.png",
+      "selectedIconPath": "icons/compass_green.png"
+    },
+    {
+      "pagePath": "pages/apply/index",
+      "text": "Apply",
+      "iconPath": "icons/heart.png",
+      "selectedIconPath": "icons/heart_green.png"
+    },
+    {
+      "pagePath": "pages/profile/index",
+      "text": "Profile",
+      "iconPath": "icons/person.png",
+      "selectedIconPath": "icons/person_green.png"
+    }]
+  },
+  "networkTimeout": {
+    "request": 10000,
+    "downloadFile": 10000
+  },
+  "debug": true
 }
