add position form

--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
 {
   "pages":[
-    "pages/list/index",
     "pages/position/index",
     "pages/explore/index",
     "pages/apply/index",
@@ -21,8 +20,8 @@
     "backgroundColor": "#f6f8f9",
     "borderStyle": "white",
     "list": [{
-      "pagePath": "pages/list/index",
-      "text": "List",
+      "pagePath": "pages/position/index",
+      "text": "Position",
       "iconPath": "icons/home.png",
       "selectedIconPath": "icons/home_green.png"
     },
